# MountAbu-DigitalToken-Backend

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  database.py  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/models/: __init__.py  application.py  blacklist.py  content.py  core.py  enums.py  estimate.py  inspection.py  mixins.py  notification.py  token.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: application_service.py  blacklist_service.py  sms_service.py  token_service.py
backend/controllers/: application.py  auth.py  master.py  superadmin.py
backend/core/: dependencies.py  security.py
backend/dao/: application.py  applicationmaterial.py  base.py  master.py  user.py
backend/dbmodels/: __init__.py  application.py  master.py  user.py
backend/meta/: __init__.py
backend/middlewares/: auth.py
backend/migrations/: env.py
backend/migrations/versions/: 0b12d88ab0c3_complete_application_model.py  4867a7dc9b30_add_material_foreign_key_to_application_.py  56f27d60ce81_add_master_data_and_update_application.py  972d1dba2325_initial_tables.py  (+1 more)
backend/schemas/: auth.py
backend/services/: application.py  auth.py  base.py  storage.py  user.py
docs/: API_SPECIFICATION.md  CALL summary.md  DATABASE_SCHEMA.md  PRD.md
docs/user_types/: applicant.md  cms.md  complaint_redressal.md  jen.md  naka_incharge.md  sdm.md  verification_authority.md
(+16 files in other folders)
